--- a/index.html
+++ b/index.html
@@ -11,9 +11,79 @@
     <title>Perfect RTO Exam Privacy Policy</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <img class="rounded" alt="image of Perfect RTO Exam" src=""/>
-      <a class="navbar-brand" href="#">Perfect RTO Exam</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
+      <img class="rounded mx-3" alt="image of Perfect RTO Exam" style="width: 100px;" src="https://rakeshp1997.github.io/Perfect-RTO-Exam/brand_logo-playstore.png"/>
+      <h4 class="">Perfect RTO Exam - Privacy Policy</h4>
+      <div class="container main-container">
+        <section>
+          <span class="fw-bold">Last Updated:</span>
+          <span> 13/02/2021</span>
+        </section>
+        <div class="container">
+                  <p>
+              <strong>Last updated:</strong> September 20, 2018
+            </p>
+            <br>
+            <p>
+              Pavans Group Techsoft Private Limited built the RTO Exam app as an Ad Supported app. This SERVICE is provided by Pavans Group Techsoft Private Limited at no cost and is intended for use as is.<br><br>
+              This page is used to inform app visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.<br><br>
+              If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.<br><br>
+              The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at RTO Exam unless otherwise defined in this Privacy Policy.<br>
+            </p>
+            <br>
+            <p>
+              <strong>Information Collection and Use</strong><br><br>
+              For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to Email, First Name, Last Name, State, City, Language and Phone Number. The information that we request is will be retained by us and used as described in this privacy policy.<br><br>
+              The app does use third party services that may collect information used to identify you.<br><br>
+              Link to privacy policy of third party service providers used by the app<br><br>
+              <!--<a href="https://www.google.com/policies/privacy/" title="Google Play Services" target="_blank">Google Play Services</a><br> -->
+              <a href="https://support.google.com/admob/answer/6128543?hl=en" title="AdMob" target="_blank">AdMob</a><br>
+              <a href="https://firebase.google.com/policies/analytics" title="Firebase Analytics" target="_blank">Firebase Analytics</a>
+            </p>
+            <br>
+            <p>
+              <strong>Log Data</strong><br><br>
+              We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.
+            </p>
+            <br>
+            <p>
+              <strong>Cookies</strong><br><br>
+              Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your device internal memory.<br><br>
+              This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
+            </p>
+            <br>
+            <p>
+              <strong>Service Providers</strong><br><br>
+              We may employ third-party companies and individuals due to the following reasons:<br><br>
+              •	To facilitate our Service;<br>
+              •	To provide the Service on our behalf;<br>
+              •	To perform Service-related services; or<br>
+              •	To assist us in analyzing how our Service is used.<br><br>
+
+              We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
+            </p>
+            <br>
+            <p>
+              <strong>Security</strong><br><br>
+              We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
+            </p>
+            <br>
+            <p>
+              <strong>Links to Other Sites</strong><br><br>
+              This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
+            </p>
+            <br>
+            <p>
+              <strong>Changes to This Privacy Policy</strong><br><br>
+              We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
+            </p>
+            <br>
+            <p>
+              <strong>Contact Us</strong><br><br>
+              If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="mailto:contact@rtoexam.com" title="contact@rtoexam.com">contact@rtoexam.com</a>.
+            </p>
+        </div>
+      </div>
     </nav>
   </body>
 </html>
